--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
-REACT_APP_BACKEND_URL=http://0.0.0.0:8001
+REACT_APP_BACKEND_URL=https://fd7f7a4e-b8e6-42a3-91cd-035b62cfdd9f.preview.emergentagent.com
 WDS_SOCKET_PORT=443
